# ai-context-compressor

./: .dockerignore  .gitignore  Properties_v4.hs  README.md  README_v4.md  Strategy_v4.hs  docker-compose.yml  faithful-compress.cabal
docs/: BENCHMARK_MATRIX.md  DATASET_SOURCING.md  PROJECT_STATUS_MATRIX.md  ROADMAP_NEXT.md  THESIS.md
faithful-compress/: .env.example  .gitignore  Dockerfile  cabal.project  requirements-dev.txt
faithful-compress/.devcontainer/: devcontainer.json
faithful-compress/app/: Main.hs
faithful-compress/docs/: WEEK1_PLAN.md
faithful-compress/scripts/: native-env.ps1  prepare_datasets.py  run_benchmark.py
faithful-compress/src/Faithful/: Anchor.hs  Strategy.hs  Tokenizer.hs
faithful-compress/test/data/manifests/: splits.json
faithful-compress/test/data/processed/D1_longbench_qa/: D1_longbench_qa.jsonl  D1_longbench_qa_questions.jsonl
faithful-compress/test/data/processed/D7_chat/: D7_chat_questions.jsonl
faithful-compress/test/data/raw/longbench/: hotpotqa_e.sample.jsonl  narrativeqa.sample.jsonl  repobench-p.code.sample.jsonl
faithful-compress/test/data/raw/oasst1/: oasst1.selected_trees.jsonl
faithful-compress/test/data/raw/sec/: sec.selected_sections.jsonl
scripts/: bootstrap.ps1  env_utils.py  eval.py  report.py
src/Faithful/: Core.hs  Expansion.hs
test/: Properties.hs
test/data/manifests/: sources.json
test/data/processed/D4_code/: D4_code.jsonl  D4_code_questions.jsonl
test/data/processed/D6_policy_legal/: D6_policy_legal.jsonl  D6_policy_legal_questions.jsonl
test/data/processed/D7_chat/: D7_chat.jsonl
test/data/raw/cfpb/: cfpb.selected_complaints.jsonl
test/data/raw/longbench/: lcc.code.sample.jsonl  qasper_e.sample.jsonl
