cabal-version: 3.0
name:          faithful-compress
version:       0.1.0.0
synopsis:      Faithful context compression for LLMs
description:
  Extractive context compression with typed exact/approx memory boundary,
  role-aware policy, and selective expansion.
license:       BSD-3-Clause
author:        Your Name
maintainer:    your@email.com
category:      AI, Text, Compression
build-type:    Simple
extra-doc-files:
  README.md
  docs/BENCHMARK_MATRIX.md
  docs/THESIS.md
  docs/WEEK1_PLAN.md

common warnings
  ghc-options: -Wall -Wcompat -O2

library
  import:           warnings
  exposed-modules:
    Faithful.Core
    Faithful.Anchor
    Faithful.Strategy
    Faithful.Expansion
    Faithful.Tokenizer
  build-depends:
    , base                  >= 4.17  && < 5
    , text                  >= 2.0   && < 3
    , bytestring            >= 0.11  && < 1
    , containers            >= 0.6   && < 1
    , unordered-containers  >= 0.2   && < 1
    , hashable              >= 1.4   && < 2
    , deepseq               >= 1.4   && < 2
    , directory             >= 1.3   && < 2
    , time                  >= 1.12  && < 2
    , process               >= 1.6   && < 2
    , parallel              >= 3.2   && < 4
  hs-source-dirs:   src
  default-language: GHC2021

test-suite properties
  import:           warnings
  type:             exitcode-stdio-1.0
  main-is:          Properties.hs
  hs-source-dirs:   test
  build-depends:
    , base
    , faithful-compress
    , QuickCheck            >= 2.14  && < 3
    , quickcheck-instances  >= 0.3   && < 1
    , text
    , containers
  default-language: GHC2021

executable faithful-compress-cli
  import:           warnings
  main-is:          Main.hs
  hs-source-dirs:   app
  ghc-options:      -threaded -rtsopts "-with-rtsopts=-N"
  build-depends:
    , aeson
    , async                 >= 2.2   && < 3
    , base
    , bytestring
    , containers
    , deepseq
    , faithful-compress
    , directory
    , filepath
    , text
  default-language: GHC2021
